--- a/html/index.html
+++ b/html/index.html
@@ -4,50 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>jinyoung Doc</title>
 </head>
 <body>
-    <h1> My first Heading </h1>
-    <p class="color-primary"> My First Paragraph </p> 
-    <p style="color:blue; font-size: 30px;"> My First Paragraph </p> 
-    <p class="color-primary"> My First Paragraph </p> 
-    
-    <button 
-        type="button" 
-        onclick="javascript:alert('click button!');">
-    Click</button>
-
-    <input type="text" /> <input type="number" />
-    <img 
-        width="300px"
-        src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjEwMjRfMTY0%2FMDAxNjY2NjA4Njk5OTM5.WNxwILM6FFNtFivJX1RDjjUbGYG5fX1i41L0zF-hL8wg.OAJwFlYsTJYPTvdn3zbCJEZK2u4JuYgU-G2Z16azW3Ig.JPEG.undertake6975%2F%25B8%25BB9.jpg&type=sc960_832"> 
-    
-    <select style="height:40px; font-size:20px; color:green;">
-        <option>이진영</option>
-        <option>망둥이</option>
-    </select>
-
-    <table>
-        <thead class="table-head">
-            <tr>
-                <td>이름</td>
-                <td>나이</td>
-                <td>특징</td>
-            </tr>
-        </thead>
-        <tbody class="table-body">
-            <tr>
-                <td>아무개</td>
-                <td>20</td>
-                <td>활발함</td>
-            </tr>
-            <tr>
-                <td>이진영</td>
-                <td>29</td>
-                <td>망둥이닮음</td>
-            </tr>
-        </tbody>
-    </table>
+    <a href="prac.html"><h1>Web</h1></a>
+    <h2>Html</h2>
+    <p>Hyper Text Language<br><strong><u>markup</u> laguage</strong></p>
+    <p style="margin-top: 45px;">Hello World!</p>
+    <a href="https://opentutorials.org/course/3084/18418" target="_blank" title="툴팁 속성">- 생활코딩</a><br>
+    <img src="../source/jinyoung.jpg" width="500px">
+<ol>
+    <a href="https://www.naver.com/"><li>진영이는 귀엽다.</li></a>
+    <a href="https://www.naver.com/"><li>진영이는 바보다.</li></a>
+    <a href="https://www.naver.com/"><li>진영이와 함께 하고 싶다.</li></a>
+</ol>
+<ul>
+    <li>슬기는 진영이를 사랑한다.</li>
+    <li>뀨롱~</li>
+    <li>핫뚜!</li>
+</ul>
 </body>
 </html>
