--- a/index.html
+++ b/index.html
@@ -5,23 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jinyoung Doc</title>
+    <style>
+        body {
+            margin: 0;
+        }
+        h1 {
+            font-size: 400%;
+            text-align:center;
+            border-bottom: 3px solid black;
+            margin: 0;
+            padding: 20px;
+        }
+        h2 {
+            padding-bottom: 5px;
+            margin: 0;
+        }
+        p {
+            margin: 0;
+            padding-left: 10px;
+        }
+        a {
+            color:black;
+            text-decoration: none;
+        }
+        .grid-section a {
+                text-decoration: none;
+                color: aqua;
+        }
+
+        @media(min-width:600px)
+        {
+            .left-section {
+            text-align: left;
+            padding: 10px;
+            padding-left: 32px;
+            border-right:3px solid black;
+            margin: 0;
+            }
+            .right-section {
+                text-align: right;
+                padding: 10px;
+                padding-left: 32px;
+                margin: 0;
+            }
+            .grid-section {
+                display: grid;
+                margin:0;
+                grid-template-columns: 250px 1fr;
+            }
+            
+            img {
+                width:600px;
+            }
+        }
+        @media(max-width:599px){
+            img {
+                width:300px;
+            }
+        }
+    </style>
 </head>
 <body>
     <a href="html/prac.html"><h1>Web</h1></a>
-    <h2>Html</h2>
-    <p>Hyper Text Language<br><strong><u>markup</u> laguage</strong></p>
-    <p style="margin-top: 45px;">Hello World!</p>
-    <a href="https://opentutorials.org/course/3084/18418" target="_blank" title="툴팁 속성">- 생활코딩</a><br>
-    <img src="source/jinyoung.jpg" width="500px">
-<ol>
-    <a href="https://www.naver.com/"><li>진영이는 귀엽다.</li></a>
-    <a href="https://www.naver.com/"><li>진영이는 바보다.</li></a>
-    <a href="https://www.naver.com/"><li>진영이와 함께 하고 싶다.</li></a>
-</ol>
-<ul>
-    <li>슬기는 진영이를 사랑한다.</li>
-    <li>뀨롱~</li>
-    <li>핫뚜!</li>
-</ul>
+    <div class="grid-section">
+        <div class="left-section">
+            <h2>Html</h2>
+            <p>Hyper Text Language<br><strong><u>markup</u> laguage</strong></p>
+        </div>
+        <div class="right-section">
+            <a href="https://opentutorials.org/course/3084/18418" target="_blank" title="툴팁 속성">- 생활코딩</a><br>
+            <p>Hello World!</p>
+        </div>
+    </div>
+    <img src="source/jinyoung.jpg">
+    <div class="grid-section">
+        <ol class="left-section">
+            <a href="https://www.naver.com/"><li>진영이는 귀엽다.</li></a>
+            <a href="https://www.naver.com/"><li>진영이는 바보다.</li></a>
+            <a href="https://www.naver.com/"><li>진영이와 함께 하고 싶다.</li></a>
+        </ol>
+        <ul class="right-section">
+            <li>슬기는 진영이를 사랑한다.</li>
+            <li>뀨롱~</li>
+            <li>핫뚜!</li>
+        </ul>
+    </div>
 </body>
 </html>
